# cpiapi

./: .gitignore  README.md  RunConfigurations.sh  pyproject.toml  requirements.txt  setup.cfg
src/cpiapi/: __init__.py  __init__pre38.old_py  cpi.py  cpiTables.py  cpiapi.py  cpitable.py  cpitables.py  cpitime.py
src/cpiapi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: test_cpi.py  verify_sorted.py
