[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cpiapi"
version = "2.1.0"
authors = [ { name="Dennis Risen", email="dar5@case.edu" }, ]
description = "Cisco Prime Infrastructure API utilities"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Licence :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
              ]
dependencies = [ "pytz>=2022.7", "requests>=2.27", "urllib3>=1.26",
    "mylib @ git+https://github.com/drisen/mylib.git",
    "loom @ git+https://github.com/drisen/loom.git"
]

[project.urls]
"Homepage" = "https://github.com/drisen/cpiapi"
"Bug Tracker" = "https://github.com/drisen/cpiapi/issues"
